@@ -583,7 +583,8 @@ val print_antiquotationsP =
 val thms_containingP =
   OuterSyntax.improper_command "thms_containing"
     "print facts containing certain constants or variables"
-    K.diag (Scan.repeat P.term >> (Toplevel.no_timing oo IsarCmd.print_thms_containing));
+    K.diag (Scan.option (P.$$$ "(" |-- P.!!! (P.nat --| P.$$$ ")")) --
+      Scan.repeat P.term >> (Toplevel.no_timing oo IsarCmd.print_thms_containing));
 
 val thm_depsP =
   OuterSyntax.improper_command "thm_deps" "visualize theorem dependencies"
